--- a/task02/app/lambdas/hello_world/lambda_config.json
+++ b/task02/app/lambdas/hello_world/lambda_config.json
@@ -14,7 +14,16 @@
   "env_variables": {},
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
-  "url_config": {},
+  "url_config": {
+    "auth_type": "NONE",
+    "cors": {
+      "allow_origins": ["*"],
+      "allow_methods": ["GET"],
+      "allow_headers": ["Content-Type"],
+      "expose_headers": [],
+      "max_age": 600
+    }
+  },
   "ephemeral_storage": 512,
   "tags": {}
 }
