--- a/task04/app/lambdas/sns_handler/lambda_config.json
+++ b/task04/app/lambdas/sns_handler/lambda_config.json
@@ -9,12 +9,7 @@
   "timeout": 100,
   "lambda_path": "lambdas/sns_handler",
   "dependencies": [],
-  "event_sources": [
-    {
-      "resource_name": "lambda_topic",
-      "resource_type": "sns"
-    }
-  ],
+  "event_sources": [],
   "env_variables": {},
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
