--- a/task04/app/lambdas/sqs_handler/lambda_config.json
+++ b/task04/app/lambdas/sqs_handler/lambda_config.json
@@ -9,13 +9,7 @@
   "timeout": 100,
   "lambda_path": "lambdas/sqs_handler",
   "dependencies": [],
-  "event_sources": [
-    {
-      "resource_name": "async_queue",
-      "resource_type": "sqs",
-      "batch_size": 10
-    }
-  ],
+  "event_sources": [],
   "env_variables": {},
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
