--- a/task05/package.json
+++ b/task05/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.758.0",
-    "@aws-sdk/util-dynamodb": "^3.758.0",
+    "aws-sdk": "^2.1692.0",
     "uuid": "^11.1.0"
   }
 }
