--- a/task05/app/lambdas/api_handler/lambda_config.json
+++ b/task05/app/lambdas/api_handler/lambda_config.json
@@ -10,7 +10,12 @@
   "lambda_path": "lambdas/api_handler",
   "lambdas_alias_name": "learn",
   "target_table": "Events",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "resource_name": "api_handler",
+      "resource_type": "lambda"
+    }
+  ],
   "event_sources": [],
   "env_variables": {
     "TARGET_TABLE": "${target_table}"
