--- a/task05/app/lambdas/api_handler/lambda_config.json
+++ b/task05/app/lambdas/api_handler/lambda_config.json
@@ -8,13 +8,9 @@
   "memory": 128,
   "timeout": 100,
   "lambda_path": "lambdas/api_handler",
-  "lambdas_alias_name": "learn",
-  "target_table": "Events",
-  "env_variables": {
-    "TARGET_TABLE": "${TARGET_TABLE}"
-  },
   "dependencies": [],
   "event_sources": [],
+  "env_variables": {},
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
   "url_config": {},
