--- a/task04/app/lambdas/sqs_handler/lambda_config.json
+++ b/task04/app/lambdas/sqs_handler/lambda_config.json
@@ -11,7 +11,7 @@
   "lambdas_alias_name": "learn",
   "target_table": "Events",
   "env_variables": {
-    "TARGET_TABLE": "${TARGET_TABLE}"
+    "TARGET_TABLE": "${target_table}"
   },
   "dependencies": [],
   "event_sources": [],
