--- a/task04/app/lambdas/sqs_handler/lambda_config.json
+++ b/task04/app/lambdas/sqs_handler/lambda_config.json
@@ -1,20 +1,23 @@
 {
   "version": "1.0",
-  "name": "api_handler",
-  "func_name": "lambdas/api_handler/index.handler",
+  "name": "sqs_handler",
+  "func_name": "lambdas/sqs_handler/index.handler",
   "resource_type": "lambda",
-  "iam_role_name": "api_handler-role",
+  "iam_role_name": "sqs_handler-role",
   "runtime": "nodejs20.x",
   "memory": 128,
   "timeout": 100,
-  "lambda_path": "lambdas/api_handler",
+  "lambda_path": "lambdas/sqs_handler",
   "lambdas_alias_name": "learn",
-  "target_table": "Events",
-  "env_variables": {
-    "TARGET_TABLE": "${target_table}"
-  },
   "dependencies": [],
-  "event_sources": [],
+  "event_sources": [
+    {
+      "resource_type": "sqs_trigger",
+      "target_queue": "async_queue",
+      "batch_size": 10
+    }
+  ],
+  "env_variables": {},
   "publish_version": true,
   "alias": "${lambdas_alias_name}",
   "url_config": {},
