--- a/task07/appsync_src/GraphQL_API/appsync_config.json
+++ b/task07/appsync_src/GraphQL_API/appsync_config.json
@@ -1,1 +1,39 @@
-{"name": "GraphQL_API", "resource_type": "appsync", "primary_auth_type": "AWS_IAM", "api_key_expiration_days": 7, "schema_path": "schema.graphql", "data_sources": [{"name": "EventsDataSource", "type": "AMAZON_DYNAMODB", "dynamodb_config": {"tableName": "Events", "awsRegion": "${region}", "useCallerCredentials": false}, "service_role_arn": "${appsync_api_role.Arn}"}], "resolvers": [{"type_name": "Mutation", "field_name": "createEvent", "data_source_name": "EventsDataSource"}, {"type_name": "Query", "field_name": "getEvent", "data_source_name": "EventsDataSource"}], "functions": [], "log_config": {"logging_enabled": false, "field_log_level": "ERROR", "cloud_watch_logs_role_name": "", "exclude_verbose_content": false}, "tags": {}, "deployment_package": "appsync_GraphQL_API.zip"}
+{
+  "name": "GraphQL_API",
+  "resource_type": "appsync",
+  "primary_auth_type": "AWS_IAM",
+  "api_key_expiration_days": 7,
+  "schema_path": "schema.graphql",
+  "data_sources": [
+    {
+      "name": "EventsDataSource",
+      "type": "AMAZON_DYNAMODB",
+      "dynamodb_config": {
+        "tableName": "Events",
+        "awsRegion": "en-central-1",
+        "useCallerCredentials": false
+      }
+    }
+  ],
+  "resolvers": [
+    {
+      "type_name": "Mutation",
+      "field_name": "createEvent",
+      "data_source_name": "EventsDataSource"
+    },
+    {
+      "type_name": "Query",
+      "field_name": "getEvent",
+      "data_source_name": "EventsDataSource"
+    }
+  ],
+  "functions": [],
+  "log_config": {
+    "logging_enabled": false,
+    "field_log_level": "ERROR",
+    "cloud_watch_logs_role_name": "",
+    "exclude_verbose_content": false
+  },
+  "tags": {},
+  "deployment_package": "appsync_GraphQL_API.zip"
+}
