--- a/task07/appsync_src/GraphQL_API/appsync_config.json
+++ b/task07/appsync_src/GraphQL_API/appsync_config.json
@@ -1,1 +1,47 @@
-{"name": "GraphQL_API", "service_role_name": "appsync-role", "resource_type": "appsync", "primary_auth_type": "AWS_IAM", "api_key_expiration_days": 7, "schema_path": "schema.graphql", "data_sources": [{"name": "EventsDataSource", "type": "AMAZON_DYNAMODB", "dynamodb_config": {"tableName": "Events", "awsRegion": "eu-central-1", "useCallerCredentials": false}, "service_role_arn": "appsync_role"}], "resolvers": [{"type_name": "Mutation", "field_name": "createEvent", "data_source_name": "EventsDataSource"}, {"type_name": "Query", "field_name": "getEvent", "data_source_name": "EventsDataSource"}], "functions": [], "log_config": {"logging_enabled": false, "field_log_level": "ERROR", "cloud_watch_logs_role_name": "", "exclude_verbose_content": false}, "tags": {}, "deployment_package": "appsync_GraphQL_API.zip"}
+{
+  "name": "GraphQL_API",
+  "resource_type": "appsync",
+  "primary_auth_type": "API_KEY",
+  "api_key_expiration_days": 7,
+  "schema_path": "schema.graphql",
+  "data_sources": [
+    {
+      "name": "events",
+      "type": "AMAZON_DYNAMODB",
+      "service_role_name": "appsync_role",
+      "dynamodb_config": {
+        "table_name": "Events",
+        "aws_region": "eu-central-1"
+      }
+    }
+  ],
+  "resolvers": [
+    {
+      "kind": "UNIT",
+      "type_name": "Mutation",
+      "field_name": "createEvent",
+      "data_source_name": "events",
+      "runtime": "VTL",
+      "request_mapping_template_path": "resolvers/mutation/createevent/req_mapping_template.vtl",
+      "response_mapping_template_path": "resolvers/mutation/createevent/resp_mapping_template.vtl"
+    },
+    {
+      "kind": "UNIT",
+      "type_name": "Query",
+      "field_name": "getEvent",
+      "data_source_name": "events",
+      "runtime": "VTL",
+      "request_mapping_template_path": "resolvers/query/getevent/req_mapping_template.vtl",
+      "response_mapping_template_path": "resolvers/query/getevent/resp_mapping_template.vtl"
+    }
+  ],
+  "functions": [],
+  "log_config": {
+    "logging_enabled": true,
+    "field_log_level": "ERROR",
+    "cloud_watch_logs_role_name": "appsync_role",
+    "exclude_verbose_content": false
+  },
+  "tags": {},
+  "deployment_package": "appsync_GraphQL_API.zip"
+}
